--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VerifyPhoneActivity"></activity>
+        <activity android:name=".Exhaust_Services"></activity>
+        <activity android:name=".Air_conditioner_repair" />
+        <activity android:name=".Hybridservice" />
+        <activity android:name=".Auto_electric_service" />
+        <activity android:name=".EngineService" />
+        <activity android:name=".flipper" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".VerifyPhoneActivity" />
         <activity android:name=".main3" />
         <activity android:name=".main2" />
         <activity android:name=".MainActivity">
