--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:resizeable="true"
         android:smallScreens="true"
         android:xlargeScreens="true" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -17,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Hybridservice"></activity>
+        <activity android:name=".UserProfile"></activity>
+        <activity android:name=".Hybridservice" />
         <activity android:name=".Exhaust_Services" />
         <activity android:name=".Auto_electric_service" />
         <activity android:name=".Air_conditioner_repair" />
@@ -25,7 +27,6 @@
         <activity android:name=".flipper" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".VerifyPhoneActivity" />
-        <activity android:name=".main3" />
         <activity android:name=".main2" />
         <activity android:name=".MainActivity">
             <intent-filter>
